update jiblm ver thru sec 15

--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -1527,7 +1527,8 @@ For a point $A$ on the arc $\widearc{BC}$, show that as $A$ moves along the arc 
 \end{conjecture}
 
 
-The next theorem is very pretty, and is commonly attributed to Archimedes.
+The next theorem is very pretty, and is commonly attributed to 
+Archimedes.
 
 \begin{conjecture}[Archimedes' Theorem of the Broken Chord] Let $AB$ and $BC$ be two chords of a circle $\mathcal{C}$, where $BC$ is greater than $AB$.
 (Such a configuration is sometimes called a ``broken chord.'')
@@ -1539,6 +1540,17 @@ Then $F$ is the midpoint of the broken chord, that is, $AB$ and $BF$ taken toget
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Construction Problems}
+
+\begin{annotation}
+{
+\color{blue}
+When I make this section available, I discuss the rules of the ``construction challenge game,'' including how one counts steps. Then when students present some of the material, I recount it again. The idea of a ``fixable compass'' requires several rounds of explanation for some students. In the end, it is just allowing the students to do all of the work of Euclid Proposition I.2 in one step. Most modern compasses have a little screw top that allows the drafter to fix a radius, and we just try to mimic that.
+
+I also explain to the students that Euclid has many of these constructions. (They know, they have already read them.) But we are up to a slightly different task. Euclid arranges his work to optimize the logical presentation. We will instead try to minimize the number of pencil strokes required, which might complicate the proofs.
+
+These are largely taken from the excellent Hartshorne \cite{Hartshorne}.
+}
+\end{annotation}
 
 The following problems are \underline{construction challenges}. In each case, you are to
 \begin{enumerate}
@@ -1609,6 +1621,12 @@ Construct a circle inscribed in a given triangle $ABC$. (par 13)
 Construct a circle circumscribed about a given triangle $ABC$. (par 7)
 \end{challenge}
 
+\begin{annotation}
+{
+\color{blue}
+It is possible to omit the rest of the challenges from this section if pressed for time. They are fun to do, but not crucial.
+}
+\end{annotation}
 
 
 \begin{challenge}\label{chal:cut-segment-by-circle}
@@ -1643,6 +1661,16 @@ How many such lines are there?
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{The Theory of Content}
 
+\begin{annotation}
+{
+\color{blue}
+The student introduction her has a lot to say about how Euclid treats area. This is a big intellectual shift for the students, and the class will certainly slow down as the students try to find firm footing again. The long introduction is something I do in class, too. I find it helps the students immensely to spend five minutes on an orientation session when this section is distributed. I begin by pointing out that we are still using the axiomatic method, but we have a new meaning of ``equality'' for figures. I explain that though Euclid makes the switch without further comment, I have chosen the term ``equal content'' to help separate out the ideas. If appropriate, it might help to point out that this is just a different equivalence relation. Of course, the axioms written down as a guide are really just the familiar common notions recast.
+
+When and if it seems appropriate, I encourage students to come up with a notation for equal content that is different from the traditional equal sign. This smoothes out presentations.
+}
+\end{annotation}
+
+
 Read the parts of the \emph{Elements} that have to do with the basic theory of area. These are Book I, Propositions 35-48, Book II, and Book III, Propositions 35-37.
 
 Euclid usually calls two planar figures ``equal" without explanation. 
@@ -1670,28 +1698,72 @@ For the following tasks, work in the style of Euclid using any result from the f
 Prepare a presentation of Euclid's beautiful proof of Proposition I.47.
 \end{problem}
 
+\begin{annotation}
+{
+\color{blue}
+This is an odd task. Unlike all the previous tasks, the student is not required to do any new mathematics. But I want a chance to marvel at this argument. Usually I reserve this item for a student that needs a presentation. And when the presentation is complete I talk with the class about how the wonderment in this result is lost since they all had to memorize $a^2 + b^2 = c^2$ without seeing why. I point out that this is clearly the goal towards which Euclid aimed all of Book I. I ask them to look through all of the first four books and see that each has this kind of beautiful theorem near the end.
+}
+\end{annotation}
+
 \begin{conjecture}\label{conj:false-area}
 Let $ABC$ and $DEF$ be triangles. Let $X$ be the midpoint of $DE$, $Y$ the midpoint of $BC$. If $AB$ is congruent to $DX$ and $EF$ is congruent to $BY$, then $ABC$ and $DEF$ have equal content.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+This is false.
+}
+\end{annotation}
 
 \begin{problem}\label{prob:expand-false-area}
 Expand on the statement of the last conjecture--find some theorems and prove them.
 \end{problem}
 
+\begin{annotation}
+{
+\color{blue}
+After the last one is settled, this allows students to exercise some creativity.
+}
+\end{annotation}
+
 \begin{problem}\label{prob:RASS-area} 
 The \emph{hypotenuse-leg} Theorem 7.2 can be proved using the theory of equal content. Find such a proof.
 \end{problem}
+
+\begin{annotation}
+{
+\color{blue}
+Now it is finally time to bring out the Pythagorean theorem. Note that such an argument will require also showing that two squares of equal content must have sides which are congruent. Students often miss this point at first.
+}
+\end{annotation}
 
 \begin{question}
 There are two ways to inscribe a square in an isosceles right triangle. Which one has the greater content?
 \end{question}
 
+\begin{annotation}
+{
+\color{blue}
+One way has a vertex at the right angle of the triangle. The other way has a side lying on the hypotenuse of the triangle. Of course, a satisfactory answer to the question comes with an explanation.
+}
+\end{annotation}
+
 \begin{conjecture}[The Parallelogram Law]\label{conj:parallelogram-law}
 Let $ABCD$ be a parallelogram. Then the squares on the diagonals taken together have equal content with the squares on the four sides taken together.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+This is challenging because of its length and the large number of terms to juggle around. The cleanest argument I know uses both versions of the law of cosines hiding in Book II after dissecting the parallelogram along each of its diagonals.
 
+I often pause here to discuss how Euclid is doing the work of solving certain quadratic equations in various parts of Book II, but by considering each product as an area. I then point out that it is a long time between Euclid and the modern concept of number, and the invention of a convenient notation to do algebra.\\
+
+
+The next two items require no new mathematics to be done, but they do require a student to synthesize all of the material in Book II. 
+}
+\end{annotation}
 
 \begin{problem}\label{prob:rectify-triangle}
 Given a triangle $ABC$ and a segment $DE$, construct a rectangle with equal content to $ABC$ and with $DE$ as one side.
@@ -1711,42 +1783,110 @@ The following are come challenging tasks having to do with the theory of equal c
 The first two are important to us.
 The rest are opportunities to show off.
 
+\begin{annotation}
+{
+\color{blue}
+The first two items of this section are things I always keep, but the rest can be left out if there is a time constraint.
+}
+\end{annotation}
+
 \begin{problem}\label{prob:subtract-rect}
 Given two rectangles, $P$ and $R$, construct a square $S$ so that, when taken together the content of $R$ and $S$ is equal to the content of $P$.
 \end{problem}
 
-\begin{problem} \label{conj:parallel-in-triangle} Use the theory of content to give a new proof of the midline theorem, Theorem 3.6.
+\begin{annotation}
+{
+\color{blue}
+This is a bit of a twist on the kinds of things Euclid does, but requires no new technology. One could conceivably just quote results from Book II to finish this task without any work at all, but the directness of the question and the concreteness of the rectangles and squares encourages students to put things together nicely.
+}
+\end{annotation}
+
+
+\begin{problem} \label{conj:parallel-in-triangle} Use the theory of content to give a new proof of the midline theorem, Theorem \ref{conj:midline-theorem}.
 \end{problem}
+
+\begin{annotation}
+{
+\color{blue}
+Here is another bridge to similar triangles. I pause at this point and talk to the students about how Euclid develops proportions in Book V just so he can handle similar figures in Book VI, and this result is a way to connect things.
+}
+\end{annotation}
 
 \begin{challenge}\label{chal:circle-given-two-points-tangent}
 Given a line $\ell$ and given two points $A$ and $B$ not lying on $\ell$, construct a circle passing through $A$ and $B$ and tangent to $\ell$.
 \end{challenge}
 
+\begin{annotation}
+{
+\color{blue}
+Students often struggle to see the connection between this result and the concept of area. It helps to remind them to read the end of Book III, where the ideas of equal content are discussed in the context of circles.
+}
+\end{annotation}
+
 \begin{challenge}\label{chal:circle-point-two-tangents}
 Given two lines $\ell$ and $m$ and a point $P$ not on either line, construct a circle through $P$ and tangent to both $\ell$ and $m$.
 \end{challenge}
+
+\begin{annotation}
+{
+\color{blue}
+The comments from the last challenge apply here, too.
+}
+\end{annotation}
 
 \begin{conjecture}\label{conj:content-triangle}
 Let $ABC$ be a triangle, $DE$ a line parallel to the base $BC$, and $F$ the midpoint of segment $DE$, where $D$ lies on ray $AB$ and $E$ lies on ray $AC$. Let $AF$ meet $BC$ at $G$. Then $G$ is the midpoint of $BC$.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+Again, encourage the struggling student to find a connection to the ideas of equal content. 
+}
+\end{annotation}
 
 \begin{conjecture}\label{conj:content-circle}
 Let $\Gamma$ be a circle with center $O$. Let $A$ be a point outside the circle, and $AB$ and $AC$ tangents to $\Gamma$ from $A$, with $B, C$ lying on $\Gamma$. Let $BC$ meet $OA$ at $D$. Then the rectangle on $OA$ and $OD$ has equal content with the square on $OB$.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+This is a version of the straightedge and compass construction of \emph{inversion in a circle}.
+}
+\end{annotation}
+
 \begin{conjecture}\label{conj:right-triangle-similarity}
 Let $ABC$ be a right triangle with right angle at $A$. Let $AD$ be the altitude from $A$ to side $BC$. The square on side $AD$ has equal content with the rectangle on $BD$ and $DC$.
 \end{conjecture}
+
+\begin{annotation}
+{
+\color{blue}
+This is related to the extraction of a square root. If the figure is constructed so that $BD$ is a unit segment, and $DC$ is some given segment, the segment $AD$ will be the square root of $DC$.
+}
+\end{annotation}
 
 \begin{conjecture}\label{conj:divide-triangle}
 Let $ABC$ be a triangle and $D$ a point on side $BC$. Let $E$ be the midpoint of $BC$ and draw the parallel to $AD$ through $E$. Let this new line meet the union of $AB$ and $AC$ at a point $F$. Then the segment $DF$ cuts the triangle into two polygons of equal content.
 \end{conjecture}
 
-
+\begin{annotation}
+{
+\color{blue}
+This is challenging. 
+}
+\end{annotation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Regular Figures, especially the Pentagon}
+
+\begin{annotation}
+{
+\color{blue}
+Now we push on to a big finale: the construction of a regular pentagon. I tell the students that this gem of a result has been my goal all semester and ask them to work hard to get there. If time is an issue, only use the first four tasks.
+}
+\end{annotation}
 
 Read Book IV of the \emph{Elements}. Pay particular attention to propositions 10-12.
 
@@ -1765,9 +1905,24 @@ Construct a square in as few steps as possible. (par 9)
 Given a line segment $AB$, construct a regular pentagon having $AB$ as a side. (par 11)
 \end{problem}
 
+\begin{annotation}
+{
+\color{blue}
+This requires re-organizing the information from Euclid to streamline the construction rather than the proof. 
+}
+\end{annotation}
+
+
 \begin{problem}\label{prob:circle-three-tangent-circles}
 Given a circle $\Gamma$ and its center $O$, construct inside $\Gamma$ three equal circles, each one tangent to $\Gamma$ and to the other two. (par 13)
 \end{problem}
+
+\begin{annotation}
+{
+\color{blue}
+The first observation to make is that a symmetric solution would be nice. That might involve an equilateral triangle. ``Say, have you finished Problem \ref{prob:circle-inscribe-triangle}?''
+}
+\end{annotation}
 
 \begin{problem}\label{prob:inscribed-circle-content}
 Let $ABC$ be an equilateral triangle inscribed in a circle. Let $D$ and $E$ be the midpoints of two sides, and extend segment $DE$ to meet the circle at $F$ so that $E$ lies between $D$ and $F$. Show that the rectangle on $EF$ and $DF$ has the same content as the square on $DE$.
@@ -1817,7 +1972,14 @@ Triangle $BJI$ is isosceles and its base angles are twice the angle at $B$.
 Show that $BKJIL$ is a regular pentagon.
 \end{conjecture}
 
+\begin{annotation}
+{
+\color{blue}
+I pause and challenge the students to give the reasons for the particular steps in this construction. It can help to step back and remember that each of these things has a reason for being there.
 
+Once, I had an extra day and cooperative weather, so I took the students outside to work this construction. They worked in pairs with long bits of string and sidewalk chalk, and we drew pentagons inscribed in circles outside the math department building. (The string is good enough to serve as both straightedge and compass.) It was a fun way to celebrate all we had learned.
+}
+\end{annotation}
 
 
 
