--- a/instructors_manual.tex
+++ b/instructors_manual.tex
@@ -1145,13 +1145,14 @@ Construct a square in as few steps as possible. (par 9)
 Given a line segment $AB$, construct a regular pentagon having $AB$ as a side. (par 11)
 \end{problem}
 
-This requires re-organizing the information from Euclid to streamline the construction rather than the proof. ``Say, have you finished Problem \ref{prob:circle-inscribe-triangle}?''
+This requires re-organizing the information from Euclid to streamline the construction rather than the proof. 
 
 \begin{problem}\label{prob:circle-three-tangent-circles}
 Given a circle $\Gamma$ and its center $O$, construct inside $\Gamma$ three equal circles, each one tangent to $\Gamma$ and to the other two. (par 13)
 \end{problem}
 
-The first observation to make is that a symmetric solution would be nice. That might involve an equilateral triangle.
+The first observation to make is that a symmetric solution would be nice. That might involve an equilateral triangle. ``Say, have you finished Problem \ref{prob:circle-inscribe-triangle}?''
+
 
 \begin{problem}\label{prob:inscribed-circle-content}
 Let $ABC$ be an equilateral triangle inscribed in a circle. Let $D$ and $E$ be the midpoints of two sides, and extend segment $DE$ to meet the circle at $F$ so that $E$ lies between $D$ and $F$. Show that the rectangle on $EF$ and $DF$ has the same content as the square on $DE$.
