add most of appendices

--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -4,6 +4,7 @@
 \usepackage[usenames]{xcolor}
 \usepackage{url}
 \usepackage{fourier}
+\usepackage{pdfpages}
 \newtheorem{question}[theorem]{Question}
 \newtheorem{challenge}[theorem]{Challenge}
 \newtheorem*{postulate}{Postulate}
@@ -1987,6 +1988,25 @@ Once, I had an extra day and cooperative weather, so I took the students outside
 \backmatter
 
 \begin{annotation}
+\chapter{Appendices}
+
+Here follow the following resources:
+\begin{enumerate}
+\item A sample syllabus from Fall 2013.
+\item The example paper containing Rouse Ball's fallacious argument that all triangles are isosceles.\cite{ball}
+\item The list of class conjectures made during Fall 2015.
+\item The concluding handout I give with some references to reading.
+\item The midterm and final examination papers from Fall 2015.
+\item The ``Standards for Assessment'' document I share with students detailing our learning goals.
+\end{enumerate}
+
+\includepdf[pages=-]{Syllabus.pdf}
+\includepdf[pages=-]{Ball-Fallacy.pdf}
+\includepdf[pages=-]{2015-Fall-Class-Conjectures.pdf}
+\includepdf[pages=-]{Conclusion.pdf}
+\includepdf[pages=-]{2015-Fa-EG-MidtermExam.pdf}
+\includepdf[pages=-]{2015-Fa-EG-FinalExam.pdf}
+\includepdf[pages=-]{the-standards.pdf}
 
 \end{annotation}
 
