updated jiblm ver with appendices

--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -1994,11 +1994,15 @@ Here follow the following resources:
 \begin{enumerate}
 \item A sample syllabus from Fall 2013.
 \item The example paper containing Rouse Ball's fallacious argument that all triangles are isosceles.\cite{ball}
-\item The list of class conjectures made during Fall 2015.
+\item The list of class conjectures made during Fall 2015, with information identifying students removed.
 \item The concluding handout I give with some references to reading.
 \item The midterm and final examination papers from Fall 2015.
 \item The ``Standards for Assessment'' document I share with students detailing our learning goals.
 \end{enumerate}
+
+Note that in the exams, the tasks in this set of notes are referred to with a slightly different numbering system, as I use a ``numbered within chapter'' scheme in class, but JIBLM wants items numbered along a single global sequence.
+
+
 
 \includepdf[pages=-]{Syllabus.pdf}
 \includepdf[pages=-]{Ball-Fallacy.pdf}
@@ -2007,6 +2011,8 @@ Here follow the following resources:
 \includepdf[pages=-]{2015-Fa-EG-MidtermExam.pdf}
 \includepdf[pages=-]{2015-Fa-EG-FinalExam.pdf}
 \includepdf[pages=-]{the-standards.pdf}
+
+
 
 \end{annotation}
 
