--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -65,7 +65,7 @@ The choice of Euclid as a text serves these goals, too. \emph{The Elements} has 
 
 Rather than worry over this set of deficiencies in \emph{The Elements} and in these notes, I take the view that each such difficulty is a teaching opportunity. Students will notice gaps in arguments, trouble with definitions, possible theorems that they need but are not stated as official problems, and confusing statements. Each instance creates a need for a fix. I simply ask the students to take up the responsibility of sorting out how they think things should be, and make that part of their work. Since the students find the trouble spots, they feel like they own the mathematics when they go about setting things right.
 
-This makes up an important part of the course that I think of as ``the hidden task sequence.'' Each time a trouble comes up, I challenge the students to come up with a conjecture or question and formulate it as carefully as they can. We then add that to the list of tasks to work on. A typical semester has between fifteen and twenty-five class-made questions and conjectures. I keep these in a separate list (posted on the class web site), labeled with capital roman letters. Only once I have I had to go beyond Z to AA and BB. I have included one semester's list of class-made tasks in the appendices.
+This makes up an important part of the course that I think of as ``the hidden task sequence.'' Each time a trouble comes up, I challenge the students to come up with a conjecture or question and formulate it as carefully as they can. We then add that to the list of tasks to work on. A typical semester has between fifteen and twenty-five class-made questions and conjectures. I keep these in a separate list (posted on the class web site), labeled with capital roman letters. Only once have I had to go beyond Z to AA and BB. I have included one semester's list of class-made tasks in the appendices.
 
 Another benefit of incorporating the use of student-made conjectures is that it normalizes the ordinary and common failures to mathematical work. If a student errs by making an extra hypothesis, just rephrase the theorem, and add a task to the sequence of the form ``Question X: Is Conjecture x.y still true in general?'' or something similar that seems appropriate. This happens often in the beginning of my courses, and students soon learn that ``partial progress is progress'' and that both asking good questions, and making interesting mistakes are valued.
 
@@ -87,8 +87,7 @@ The importance of a good first meeting cannot be understated.
 Students have to reach an understanding of how class will run and what is expected of them.
 Also, at least one student has to have very visible success in front of the class.
 It should also be possible to coax out a first student-made conjecture.
-Here is how I run the first day:\\[.1in]
-
+Here is how I run the first day:
 \begin{description}
 \item[\textbf{Phase I}] I arrive early and put the first three definitions and Conjecture \ref{conj:rhombus-angles} on the board.
 I reassure students that they don't need to copy this down, as I will hand it out to them later.
@@ -96,22 +95,24 @@ I also try to put them at ease with plenty of small talk about how I need to wor
 This usually spills into the first minute or two of class.
 When I am certain that the class is all present, I introduce myself briefly and ask them to try to prove the statement on the board with a partner. 
 I tell them that they should just use whatever they think they recall from high school geometry.
-This first task has been designed with several purposes in mind. There is a discussion about the different pieces of this task and their purposes following its statement below.\\[.1in]
+This first task has been designed with several purposes in mind. There is a discussion about the different pieces of this task and their purposes following its statement below.
 
 \item[\textbf{Phase II}] Now I give the students time to work in pairs.
 As they work, I walk about and introduce myself to them and learn their names one pair at a time.
-Along the way I have to take a couple of questions about mathematics, but mostly I am trying (1) to put faces to names on the roster and (2) to make myself more approachable.\\[.1in]
+Along the way I have to take a couple of questions about mathematics, but mostly I am trying (1) to put faces to names on the roster, and (2) to make myself more approachable.
 
-\item[\textbf{Phase III}] After about twenty five minutes, someone has an argument for at least part of Conjecture \ref{conj:rhombus-angles}.
+\item[\textbf{Phase III}] After about twenty-five minutes, someone has an argument for at least part of Conjecture \ref{conj:rhombus-angles}.
 I call for volunteers, but if none materialize I call on a pair that I saw do something worthy.
 I invite one student to come to the board to share ideas.
-After the student gets up, but before they start speaking, I interrupt and explain the basic ground rules to the class.\\[.1in]
+After the student gets up, but before they start speaking, I interrupt and explain the basic ground rules to the class.
+\begin{itemize}
+\item We use only last names.
+\item We are polite to a fault.
+\item When in our seats, we ask questions rather than give arguments.
+\item The presenter's job is to convince the class, but everyone else is trying to stay unconvinced as long as is reasonable.
+\end{itemize}
 
-We use only last names.
-We are polite to a fault.
-When in our seats, we ask questions rather than give arguments.
-The presenter's job is to convince the class, but everyone else is trying to stay unconvinced as long as is reasonable.
-We take ten to fifteen minutes to give the presentation and discuss it.\\[.1in]
+We take ten to fifteen minutes to give the presentation and discuss it. 
 
 Sometimes, the first presenter has a gap in their argument. 
 In this case, it is important to do two things: (1) very clearly locate the error, and (2) find something of mathematical value in the presentation for which I can praise the student.
@@ -121,14 +122,14 @@ Finding the praiseworthy aspect of a poor presentation is sometimes challenging,
 Then I bring up a second person.
 When we have a completed argument, we thank the speakers with applause. I mention that the presenter is now responsible for writing for the class journal, and that they should see the course web site for some information.
 Often it is the case that some students have noticed that the second claim in Conjecture \ref{conj:rhombus-angles} is false. If there is time, I will try to pull out of them a firm statement and argument for that claim. But sometimes this just needs to be pushed off to the beginning of the second meeting.
-\\[.1in]
+
 
 \item[\textbf{Phase IV}] After the speaker, I explain that this is how we shall spend all of our class time.
 I hand out the student's preface and the first section of problems (on the rhombus).
 I explain that they should try to find proofs for the rest of Conjecture \ref{conj:rhombus-angles} and for the next few items before the next class.
 We discuss that the point of the class is to gain power as a mathematician, and that means learning to find and defend our own arguments, so the only allowed resources are \emph{The Elements}, the course task sequence, and the class journal.
 I mention that collaboration is fine, but credit must be given.
-At this point, we are usually just over time, so I let the class go with wishes for good luck.\\[.1in]
+At this point, we are usually just over time, so I let the class go with wishes for good luck.
 \end{description}
 
 \section*{Subsequent Meetings}
@@ -202,7 +203,7 @@ Though it is not a required purchase, I also advise students of the existence of
 
 \section*{Course Web Site \& The Class Blog}
 
-I maintain a simple web site for each iteration of my course. Firstly, this serves as a repository for course documents. This includes a link for the syllabus and links for other course documents about grading and the class journal, and I use this as the method to distribute new sections of the task sequence. The task sequence is divided into sections of related tasks, which I release a section at a time.
+I maintain a simple web site for each iteration of my course. Firstly, this serves as a repository for course documents. This includes a link for the syllabus and links for other course documents about grading and the class journal, and I use this as the method to distribute new chapters of the task sequence. The task sequence is divided into chapters of related tasks, which I release a chapter at a time.
 
 Also, I keep a class blog (on the same web page) about developments. Each day after class I take ten minutes to write a short post about what happened. I include statements of theorems proved and note who has credit for them. I also write up any new conjectures or questions that came up during that meeting.
 
@@ -213,7 +214,7 @@ My particular web page is open on the internet, though it is secured by its obsc
 
 \section*{The Class Journal}
 
-As part of the basic structure of the course, I run a class journal.\footnote{I have written about this elsewhere. It is to appear as \cite{MAANOTES}.}
+As part of the basic structure of the course, I run a class journal.\footnote{I have written about this elsewhere. \cite{MAANOTES}.}
 A student who completes a task to the satisfaction of the class then is charged with writing up the result for publication. 
 
 I provide the students with a \LaTeX\ template and guidelines for preparing their papers. They submit papers to me (as the managing editor) through a dedicated email address. Each paper goes through a review and revision cycle as many times as required to get it into a reasonable shape. At first, I play the role of referee and write up little referee reports for each paper. I play referee for each student's first two papers. Later in the term, I ask the students who have two or more published papers to help out and play referee. Again, I provide the students with guidelines for being a referee. If things are going well, I often turn over the refereeing completely by week ten or eleven. 
@@ -256,7 +257,7 @@ I do not, as a rule, tell the students when they have made an error. I do model 
 \section*{The Final Meeting}
 
 The last day of class runs slightly differently than the rest. It often starts the usual way, with gathering of volunteers and a few last presentations. But I reserve the last twenty minutes for a conclusion.
-description
+
 First, I discuss with them what should come next. I talk to them about the other geometry courses offered which they might include their program. I also share with them the titles of some wonderful books they might read about geometry when the semester is over. For effect, I load a dozen or so of these previously-forbidden fruits into a big shopping bag and bring them out one-by-one as I talk about them, laying them on the table in front of me.
 
 Next, I distribute the final exam. I read the instructions and give them five minutes to read through the tasks to be sure everything is clear. 
@@ -318,7 +319,7 @@ By Postulate 1 we may draw the segments $AC$ and $BC$.
 This forms a triangle $ABC$, by definition of a triangle.
 \begin{figure}[h]
 	\centering
-    \includegraphics[width=.7\textwidth]{Euclid1_1}
+    \includegraphics[width=.6\textwidth]{Euclid1_1}
     \caption{Euclid's First Figure}
 \end{figure}
 What remains is to show that the three sides of the triangle are mutually congruent.
@@ -496,10 +497,10 @@ Also, try to anticipate some questions that your classmates might ask so that yo
 In the class meeting immediately following your successful presentation, you are required to turn in your work in the form of a paper to be published in our class journal.
 I'm sure you see that mathematical writing is very different from any writing you have been asked to do.
 One of our goals this semester is to get a start on developing a mathematical writing style.
-What should a paper look like?\footnote{The course website has links to both the example and a template.}
-I have written a paper that models the proper output and put it on the internet at our course web page.
+What should a paper look like?
+I have written a paper that models the proper output and put it on the internet at our course web page. 
 You can use it as a guide for writing your first paper.
-Also, there is a template file you can use to properly format your work in \LaTeX\ .
+Also, there is a template file you can use to properly format your work in \LaTeX\ .\footnote{The course website has links to both the example and a template. For this paper version of the notes, I have included the example at the end.}
 
 
 \subsection*{About drawing figures}
@@ -958,13 +959,14 @@ This can trip students up as they try to give a proof by contradiction and use t
 }
 \end{annotation}
 
-Notice the importance that pairs of parallel lines play in these statements.
+Notice the importance that pairs of parallel lines play in these statements.\footnote{These results don't \emph{look} to be about rectangles.}
+
 
 
 
 \begin{conjecture}[Midline Theorem] \label{conj:midline-theorem}
 Let $ABC$ be a triangle, $D$ the midpoint of $AB$ and $E$ the midpoint of $AC$.
-Then the line through $E$ and $D$, called a \emph{midline}, is parallel to the line through $B$ and $C$.\footnote{These results don't \emph{look} to be about rectangles.}
+Then the line through $E$ and $D$, called a \emph{midline}, is parallel to the line through $B$ and $C$.
 \end{conjecture}
 
 \begin{annotation}
@@ -1005,7 +1007,7 @@ This can be a bit unsettling at first, but the basic idea is like a tee-shirt qu
 Since this might be new to you, let me lead you a bit with the following items.
 
 \begin{problem}\label{prob:Ball}
-Read Professor Ball's argument and figure out what went wrong.
+Read Professor Ball's argument\footnote{For this paper version of the notes, I have included this example at the end.} and figure out what went wrong.
 Recall that you can find it on the course web site under the "Class Journal" tab.
 Pinpoint his error and present it to the class.\footnote{Prof. Ball uses a result he calls the hypotenuse-leg theorem, which states that if two right triangles have two pairs of corresponding sides congruent, and one of the pairs is the hypotenuses, then the triangles are congruent. For now, we grant that this theorem is true, and is not the source of Prof. Ball's error. We'll come back to address this theorem later when we study triangles in detail.}
 \end{problem}
@@ -2013,7 +2015,9 @@ Note that in the exams, the tasks in this set of notes are referred to with a sl
 
 
 \includepdf[pages=-]{Syllabus.pdf}
+\end{annotation}
 \includepdf[pages=-]{Ball-Fallacy.pdf}
+\begin{annotation}
 \includepdf[pages=-]{2015-Fall-Class-Conjectures.pdf}
 \includepdf[pages=-]{Conclusion.pdf}
 \includepdf[pages=-]{2015-Fa-EG-MidtermExam.pdf}
