correct first two posts; add conj A to class list

--- a/_posts/2016-08-15-Welcome.md
+++ b/_posts/2016-08-15-Welcome.md
@@ -4,7 +4,7 @@ title: Welcome to Euclidean Geometry
 date: 2016-05-09 17:00
 ---
 
-# Welcome to Euclidean Geometry
+### Welcome!
 
 This semester we will study classical planar geometry. Our emphasis will be on using
 an axiomatic approach, based in Euclid's _Elements_ as a way of learning the
