update TE G-cover and add issue 5

--- a/journal/TEG-cover.tex
+++ b/journal/TEG-cover.tex
@@ -6,26 +6,38 @@
 \begin{document}
 \thispagestyle{empty}
 \begin{center}
-{\Huge Transactions\\ in\\ \textbf{Euclidean Geometry}}
+{\Huge Transactions\\ in\\[.2in] \textbf{Euclidean Geometry}}
 \vspace{1in}
+
+\begin{figure}[h!]
 \includegraphics[width=1.1\textwidth]{cover-image.png}
-\vfill
-{\Huge Issue \# 1}
+\end{figure}
+
+\vspace{1in}
+
+{\Huge Issue \# 5}
 \end{center}
 
 \clearpage
 
 \center \Large \textbf{Table of Contents}\\[.5in]
+\normalsize
 \begin{tabular}{lr}
 \textbf{Title} & \textbf{Author}\\[.25in]
-\emph{Angles in Rhombi} & Mackenzie Mitchell \\[.5in]
-\emph{Rhombi in Relation to Squares} & Mackenzie Mitchell \\[.5in]
-\emph{All Rhombi are Parallelograms} & Tessa Cohen \\[.5in]
-\emph{Rhombus Diagonals Meeting at a Point} & Heather Bavido \\[.5in]
-\emph{Diagonals of a Kite} & Amanda Worsfold \\[.5in]
-\emph{Congruency of Opposite Sides in Rectangles} & Erica Schultz \\[.5in]
-\emph{Midpoints in a Quadrilateral} & Danielle Maus and \\
-                         & Mackenzie Mitchell  
+\emph{Construction of a Kite} & Kevin Conger \\[.25in]
+\emph{Defining a Non-Convex Kite} & Kevin Conger \\[.25in]
+\emph{Cohen and Conger Kites} & Tessa Cohen \\[.25in]
+\emph{Convex or Non-Convex Polygons} & Staci Schmeling \& \\
+				& Mackenzie Mitchell \\[.25in]
+\emph{Fixing Euclid Proposition 7} & Tessa Cohen \& \\
+									& Erica Schultz \\[.25in]
+\emph{A Regular Rhombus is a Square} & Staci Schmeling \\[.25in]
+\emph{Pentagon Regularity Given Certain Angles} & Danielle Maus \\[.25in]
+\emph{Angle Bisectors of a Triangle are Concurrent} & Taryn Van Ryswyk \\[.25in]
+\emph{Tangent Line Congruency} & Christopher Merck\\[.25in]
+\emph{SSS Theorem and Circle Intersections} & Christopher Merck\\[.25in]
+\emph{Cyclic Quadrilaterals} & Danielle Maus \\[.25in]
+\emph{A Circle Contains the Sum of Four Right Angles} & Taryn Van Ryswyk \\
 \end{tabular}
 
 \includepdf[pages=-]{1.pdf}
@@ -35,5 +47,10 @@
 \includepdf[pages=-]{5.pdf}
 \includepdf[pages=-]{6.pdf}
 \includepdf[pages=-]{7.pdf}
+\includepdf[pages=-]{8.pdf}
+\includepdf[pages=-]{9.pdf}
+\includepdf[pages=-]{10.pdf}
+\includepdf[pages=-]{11.pdf}
+\includepdf[pages=-]{12.pdf}
 
 \end{document}
