update dates to sp17; add experimental exercises to eg3

--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[Math 3600]{Math 3600}
-\date{Fall 2016}
+\date{Spring 2017}
 
 \begin{document}
 
