--- a/EG_main03.tex
+++ b/EG_main03.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2016}
+\date{Spring 2017}
 
 \begin{document}
 
@@ -98,6 +98,14 @@ Then the line through $E$ and $D$, called a \emph{midline}, is parallel to the l
 
 \begin{conjecture}[Varignon's Theorem]\label{conj:Varignon}
 Let $ABCD$ be a quadrilateral. The midpoints of the four sides are the vertices of a parallelogram.
+\end{conjecture}
+
+\begin{conjecture}[Kinda Tricky, version one] \label{conj:experiment-1}
+Let $ABCD$ be a quadrilateral. If $AB$ is congruent to $CD$ and $BC$ is congruent to $AD$, then $ABCD$ is a parallelogram.
+\end{conjecture}
+
+\begin{conjecture}[Kinda Tricky, version two] \label{conj:experiment-2}
+Let $ABCD$ be a quadrilateral. If $AB$ is congruent to $CD$ and angle $BCD$ is congruent to $DAB$, then $ABCD$ is a parallelogram.
 \end{conjecture}
 
 
