--- a/EG_main04.tex
+++ b/EG_main04.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2016} 
+\date{Spring 2017} 
 
 \begin{document}
 
